<resources>
    <string name="app_name">SmartID</string>
    <string name="pagent">Página de entrada</string>
    <string name="pres">Presenças</string>
    <string name="falt">Faltas</string>


    <string name="sort">Organizar</string>
    <string name="Disciplina">Pesquisar UC</string>
    <string name="Dia">Pesquisar por Dia</string>
    <string name="L10I">Últimos 10 registos</string>
    <string name="ListaPrincipal">Listagem principal</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="ok">OK</string>
    <string name="NEUC">Não existem UC com esse nome!</string>
    <string name="NEPND">Não existem registos de presenças neste dia!</string>
    <string name="NER">Não existem registos para listar!</string>
    <string name="NET">Sem conexão à internet!</string>

    <string name="logout">Logout</string>
    <string name="nome">Nome:</string>
    <string name="numero">Número:</string>
    <string name="smartid">SmartID</string>
    <string name="aluno">Aluno:</string>
    <string name="verpresenca">Ver presenças</string>
    <string name="verfalta">Ver faltas</string>
    <string name="vnm">Nome</string>
    <string name="password">Password</string>
    <string name="loginauto">Permanecer conectado</string>
    <string name="login">Login</string>
    <string name="loginsi">Login - SmartID</string>
    <string name="NPI">Erro! Verifique as credenciais ou a conexão à internet</string>
    <string name="PesqUC">Pesquisar por UC</string>
    <string name="PesqDATA">Pesquisar por dia</string>

</resources>
