<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/estgipvc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        ></ImageView>

    <TextView
        android:id="@+id/smartid"
        android:layout_width="wrap_content"
        android:textSize="35sp"
        android:layout_height="wrap_content"
        android:text="@string/smartid"
        android:layout_below="@+id/imagem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        ></TextView>

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smartid"
        android:text="@string/aluno"
        android:textSize="20dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_below="@+id/nome"
        />


</RelativeLayout>